--- a/app/src/main/res/layout/activity_stopwatch.xml
+++ b/app/src/main/res/layout/activity_stopwatch.xml
@@ -16,7 +16,6 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textSize="95sp"
             android:layout_centerInParent="true"
-      android:textColor="@color/link_text_material_light"
             />
   <Button android:id="@+id/start_button"
           android:layout_width="wrap_content"
@@ -34,7 +33,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
       android:onClick="onClickStop"
-          android:text="@string/stop"
+          android:text="@string/pause"
       android:layout_marginRight="15dp"
       style="@style/AppTheme"
       android:background="@android:color/holo_red_light"
