--- a/app/src/main/res/layout/activity_stopwatch.xml
+++ b/app/src/main/res/layout/activity_stopwatch.xml
@@ -1,57 +1,96 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingBottom="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:paddingTop="16dp"
-                tools:context=".StopwatchActivity"
-                android:background="@color/material_blue_grey_800">
-  <TextView android:id="@+id/time_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text=""
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="95sp"
-            android:layout_centerInParent="true"
-            />
-  <Button android:id="@+id/start_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-      android:onClick="onClickStart"
-          android:text="@string/start"
-      android:layout_marginLeft="21dp"
-      android:layout_marginStart="21dp"
-      android:layout_below="@+id/time_view"
-      android:layout_alignParentLeft="true"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    tools:context=".StopwatchActivity"
+    android:background="@color/material_blue_grey_800">
+
+  <Button
+      android:id="@+id/start_button"
+      android:layout_width="84dp"
+      android:layout_height="54dp"
+      android:layout_alignBottom="@+id/time_view"
       android:layout_alignParentStart="true"
+      android:layout_marginStart="4dp"
+      android:background="@android:color/holo_green_dark"
+      android:onClick="onClickStart"
+      android:text="@string/start"
       android:textColor="@android:color/white"
-      android:background="@android:color/holo_green_dark"/>
-  <Button android:id="@+id/stop_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-      android:onClick="onClickStop"
-          android:text="@string/pause"
-      android:layout_marginRight="15dp"
-      style="@style/AppTheme"
-      android:background="@android:color/holo_red_light"
-      android:layout_alignBaseline="@+id/start_button"
-      android:layout_alignBottom="@+id/start_button"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/time_view"
+      app:layout_constraintVertical_bias="0.501" />
+
+  <TextView
+      android:id="@+id/time_view"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
-      android:textColor="@android:color/white"/>
-  <Button android:id="@+id/reset_button"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+      android:layout_centerVertical="true"
+      android:layout_marginTop="152dp"
+      android:text=""
+      android:textAppearance="?android:attr/textAppearanceLarge"
+      android:textSize="95sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+  <Button
+      android:id="@+id/pause_button"
+      style="@style/AppTheme"
+      android:layout_width="100dp"
+      android:layout_height="53dp"
+      android:layout_alignBaseline="@+id/start_button"
+      android:background="@android:color/holo_orange_dark"
+      android:onClick="onClickPause"
+      android:text="@string/pause"
+      android:textColor="@android:color/white"
+      android:visibility="visible"
+      app:layout_constraintBottom_toBottomOf="@+id/start_button"
+      app:layout_constraintEnd_toStartOf="@+id/reset_button"
+      app:layout_constraintStart_toEndOf="@+id/start_button"
+      app:layout_constraintTop_toTopOf="@+id/start_button" />
+
+  <Button
+      android:id="@+id/resume_button"
+      style="@style/AppTheme"
+      android:layout_width="100dp"
+      android:layout_height="53dp"
+      android:layout_alignBaseline="@+id/start_button"
+      android:layout_alignTop="@+id/reset_button"
+      android:layout_centerHorizontal="true"
+      android:background="@android:color/holo_blue_bright"
+      android:onClick="onClickResume"
+      android:text="@string/resume"
+      android:textColor="@android:color/white"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="@+id/start_button"
+      app:layout_constraintEnd_toStartOf="@+id/reset_button"
+      app:layout_constraintHorizontal_bias="0.523"
+      app:layout_constraintStart_toEndOf="@+id/start_button"
+      app:layout_constraintTop_toTopOf="@+id/start_button"
+      app:layout_constraintVertical_bias="0.0" />
+
+  <Button
+      android:id="@+id/reset_button"
+      android:layout_width="82dp"
+      android:layout_height="53dp"
+      android:layout_alignTop="@+id/pause_button"
+      android:layout_alignBottom="@+id/start_button"
+      android:layout_alignParentEnd="true"
+      android:layout_marginEnd="16dp"
+      android:background="@android:color/holo_blue_dark"
       android:onClick="onClickReset"
       android:text="@string/reset"
       android:textColor="@android:color/white"
-      android:layout_marginRight="20dp"
-      android:layout_marginEnd="20dp"
-      android:layout_alignBaseline="@+id/stop_button"
-      android:layout_alignBottom="@+id/stop_button"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentEnd="true"
-      android:background="@android:color/holo_blue_dark"/>
-</RelativeLayout>
+      app:layout_constraintBottom_toBottomOf="@+id/pause_button"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/pause_button"
+      app:layout_constraintVertical_bias="1.0" />
+</androidx.constraintlayout.widget.ConstraintLayout>
